# PyHealth

./: .all-contributorsrc  .gitignore  .readthedocs.yml  .replit  .travis.yml  CHANGES.txt  CLAUDE_CODE_INSTRUCTIONS.md  CLAUDE_CODE_INSTRUCTIONS_PERSON2.md  CONTRIBUTING.md  ChestXrayClassificationWithSaliency.ipynb  ChestXrayClassificationWithSaliencyMapping.ipynb  Example.ipynb  GENESIS_PATCH.py  GROUPMATE_INSTRUCTIONS.md  LABRADOR_TEST_SUMMARY.md  LICENSE  LICENSE.md  License.docx  License.txt  Localising-SOZ.ipynb  MANIFEST.in  MED_FLAMINGO_HAND_TEST_NEXT_STEPS.md  MED_FLAMINGO_IMPLEMENTATION_TODO.md  PR1028_PROGRESS_LOG.txt  PROJECT_REFERENCE.md  PR_DESCRIPTION.md  PULL_REQUEST_TEMPLATE.md  Proj-pyhealth.py  README.md  README.rst  README_CorGAN.md  README_MedGAN.md  README_TPC_LOS.md  TAPNET_README.rst  Wav2Sleep_IMPLEMENTATION_GUIDE.md  ablation_results.json  alcohol_use_bioclincalbert.ipynb  appveyor.yml  attentionlstm_backward_test.py  attentionlstm_forward_test.py  (+59 more)
.circleci/: config.yml
.github/: patient_readmission.py  pull_request_template.md
DL4H_alzheimers_cnn/: CNN-1.ipynb  CNN-3D.ipynb  CNN-Ablation.ipynb  CNN_3D.py  DataProcess-1.ipynb  DataProcess-nifti.ipynb  DataProcess_nifti.py  ablation_results.csv  resnet.csv  resnetconfusion_matrix.csv  simple.csv  simple3d_checkpoint.pt  simple_model_checkpoint.pt  this workconfusion_matrix.csv
benchmarks/: README.md  benchmark_short_circuit.py  loader_benchmark.py  loader_benchmark_results.csv  results.csv
calib/: utils.py
califorest_tests/: test_datasets.py  test_models.py  test_tasks.py  utils.py
chat-assistant/: Dockerfile  README.md  app_rag.py  chat.py  code-corpus-generation.py  constant.py  env.py  generate_context.py  ingest.py  main.py  pyhealth-text.txt  qa_chain.py  query_data.py  requirements.txt  test.py  text-corpus-generation.py
datasets/: README.md  all.json  che.py  collate.py  covid19_cxr.py  ehrshot.py  shhs.py  test.json  train.json  valid.json
dev/: test_trainer.py
docs/: .readthedocs.yaml  README_mimic_cxr_reports.md  _config.yml  about.rst  advance_tutorials.rst  api.rst  api_cc.rst  conf.py  contribution.rst  developer.rst  e2e_unified_embedding_protocol_mimic4.rst  example.rst  examples.rst  examples_bak.rst  faq.rst  how_to_contribute.rst  how_to_get_started.rst  index.md  index.rst  install.rst  live.rst  log.rst  medical_standards.rst  models.rst  newsletter.rst  pyhealth.data.rst  pyhealth.evaluation.rst  pyhealth.models.image.rst  pyhealth.models.rst  pyhealth.models.sequence.rst  pyhealth.utils.rst  references.bib  requirements.txt  research_initiative.rst  tasks.rst  tutorials.rst  use_cases.rst  usecase.rst  why_pyhealth.rst
examples/: BaseModel_Example.ipynb  CNN_Example.ipynb  CNN_Example_.ipynb  CaReSoundDataset_CaReSoundAQA_CaReAQA.py  ChestXray-Classification-ResNet-with-Saliency.ipynb  ChestXray-image-generation-GAN.ipynb  ChestXrayAgePrediction.ipynb  ChestXrayClassificationWithSaliency.ipynb  ChestXrayClassificationWithSaliencyMapping.ipynb  DistilBERT.ipynb  EEG_events_SparcNet.py  EEG_isAbnormal_SparcNet.py  Example.ipynb  Example.py  FAMEWS_fairness_audit.ipynb  HiRID_fairness_audit.ipynb  LUDB_ECGDelineationLUDB_ECGCODE.py  LUDB_ECGDelineationLUDB_RNN.py  MISTS_by_Hang.py  MLModel_DrugRec_Example.ipynb  MLModel_Example.ipynb  MLModel_Mortality_Example.ipynb  MedToVec_Example.ipynb  PTB_XL_README.md  Patient_APACHE_II.py  README.markdown  README.md  SHy_patient_hypergraphs_mimic3.ipynb  SimpleMIMICCXRDataset.ipynb  XGBoost_Example.ipynb  accuracy_extrapolation_example.py  activity_classification_using_dsa.py  adni_ad_classification.py  adni_ad_synthetic_data.py  adni_adclassification_cnn.ipynb  adni_alzheimer_cnn3dad.py  agent_mimic4.ipynb  alzheimer_mri_classification_alzheimer_cnn.ipynb  amiodarone_trials_conformal_meta_analysis_cma.py  benchmark-drugrec-Copy2.ipynb  (+438 more)
hackthon/: 202410-sunlab-hackthon.md
halo-testing-logs/: halo_test_3706609.err  halo_test_3706609.out  halo_test_3706620.err  halo_test_3706620.out  halo_test_3706738.err  halo_test_3706738.out  halo_test_3707040.err  halo_test_3707040.out  halo_test_3707410.err  halo_test_3707410.out  halo_test_3708721.err  halo_test_3708721.out  halo_test_3708911.err  halo_test_3708911.out  halo_test_3709442.err  halo_test_3709442.out  halo_test_3709762.err  halo_test_3709762.out  halo_test_3713150.err  halo_test_3713150.out  halo_test_3713164.err  halo_test_3713164.out
leaderboard/: README.rst  __init__.py  ext_plot.py  leaderboard_gen.py  play.ipynb  rtd_build_trigger.py  test_modules.py  utils.py
medcode/: utils.py
metrics/: __init__.py  fairness.py  multilabel.py  regression.py
models/: __init__.py  agent.py  attention_lstm.py  biot.py  tcn.py  (+11 more)
(+4556 files in other folders)
